Fix table styling and remove overflow scroll

--- a/_sass/_tables.sass
+++ b/_sass/_tables.sass
@@ -19,7 +19,7 @@ table
   tbody
 
     td
-      overflow: scroll
+      // overflow: scroll
 
       code
         padding: 0
